@@ -71,6 +71,7 @@ exports.main = function() {
             img_steamdb_store: data.url('img/steamdb_store.png'),
             img_steamdb_store_black: data.url('img/steamdb_store_black.png'),
             img_world: data.url('img/world.png'),
+            img_decline: data.url('img/decline.png'),
             img_overlay_ea_sm_120: data.url('img/overlay/ea_sm_120.png'),
             img_overlay_ea_184x69: data.url('img/overlay/ea_184x69.png'),
             img_overlay_ea_231x87: data.url('img/overlay/ea_231x87.png'),
